--- a/package.json
+++ b/package.json
@@ -1,34 +1,65 @@
 {
-	"name": "unicorn-fun",
-	"version": "0.0.0",
-	"description": "My awesome module",
-	"license": "MIT",
-	"repository": "YOUR-GITHUB-USERNAME/unicorn-fun",
-	"funding": "https://github.com/sponsors/YOUR-GITHUB-USERNAME",
-	"author": {
-		"name": "YOUR NAME",
-		"email": "YOUR EMAIL",
-		"url": "YOUR WEBSITE"
-	},
-	"type": "module",
-	"exports": "./index.js",
-	"sideEffects": false,
-	"engines": {
-		"node": ">=18"
-	},
-	"scripts": {
-		"test": "xo && ava"
-	},
-	"files": [
-		"index.js"
-	],
-	"keywords": [
-		"unicorn",
-		"fun"
-	],
-	"dependencies": {},
-	"devDependencies": {
-		"ava": "^6.1.2",
-		"xo": "^0.58.0"
-	}
+  "name": "@gsong/react-modal-dialog",
+  "version": "1.0.0",
+  "description": "No-frills modal <dialog> for React",
+  "license": "MIT",
+  "repository": "github:gsong/react-modal-dialog",
+  "author": {
+    "name": "George Song",
+    "email": "george@gsong.dev",
+    "url": "https://gsong.dev"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.cjs"
+    }
+  },
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "build": "duel --dirs",
+    "clean": "run-p clean:**",
+    "clean:build": "rimraf dist",
+    "clean:node_modules": "rimraf node_modules",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "publish": "pnpm publish --access public",
+    "typecheck": "tsc --noEmit"
+  },
+  "files": [
+    "./dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": [
+    "react",
+    "modal",
+    "dialog"
+  ],
+  "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@knighted/duel": "^1.0.8",
+    "@types/eslint-plugin-jsx-a11y": "^6.9.0",
+    "@types/react": "^18.3.3",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.9.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1"
+  }
 }
