--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gsong/react-modal-dialog",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "No-frills modal <dialog> for React",
   "license": "MIT",
   "repository": "github:gsong/react-modal-dialog",
@@ -26,7 +26,7 @@
     "clean:build": "rimraf dist",
     "clean:node_modules": "rimraf node_modules",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "publish": "pnpm publish --access public",
+    "release": "pnpm publish --access public",
     "typecheck": "tsc --noEmit"
   },
   "files": [
