--- a/remix-example/package.json
+++ b/remix-example/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
+    "e2e": "playwright test",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "prepare": "run-script-os",
+    "prepare:default": "playwright install --with-deps chromium firefox webkit",
+    "prepare:linux": "is-ci || playwright install chromium firefox webkit",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
@@ -20,6 +24,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.1",
     "@remix-run/dev": "^2.11.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -33,6 +38,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.41",
+    "run-script-os": "^1.1.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
