--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "react-modal-project",
   "packageManager": "pnpm@9.7.1",
-  "pnpm": {
-    "overrides": {
-      "remix-example>eslint": "8"
-    }
-  },
+  "type": "module",
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@types/eslint-plugin-jsx-a11y": "^6.9.0",
     "@types/is-ci": "^3.0.4",
     "@types/node": "^22.4.1",
     "@types/react": "^18.3.3",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.9.0",
     "is-ci": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
-    "turbo": "^2.0.14"
+    "rimraf": "^6.0.1",
+    "turbo": "^2.0.14",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   }
 }
