--- a/remix-example/package.json
+++ b/remix-example/package.json
@@ -7,7 +7,7 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "e2e": "playwright test",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "prepare": "run-script-os",
     "prepare:default": "playwright install --with-deps chromium firefox webkit",
     "prepare:linux": "is-ci || playwright install chromium firefox webkit",
@@ -41,7 +41,7 @@
     "run-script-os": "^1.1.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "vite": "^5.4.1",
+    "vite": "^5.4.2",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "engines": {
