--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean:node_modules": "turbo run clean:node_modules; rimraf node_modules",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "lint:prettier": "prettier --cache --check ."
+    "lint:prettier": "prettier --cache --check .",
+    "prepare": "is-ci || husky"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -16,6 +17,7 @@
     "@types/is-ci": "^3.0.4",
     "@types/node": "^22.4.1",
     "@types/react": "^18.3.3",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -23,9 +25,13 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-turbo": "^2.0.14",
     "globals": "^15.9.0",
+    "husky": "^9.1.5",
     "is-ci": "^3.0.1",
+    "lint-staged": "^15.2.9",
     "npm-run-all": "^4.1.5",
+    "pkg-dir": "^8.0.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "rimraf": "^6.0.1",
